# ngas-pytorch

./: .gitignore  README.md  pyproject.toml
docs/: algorithm_pseudocode.html
examples/: differentiable_growing_neural_gas_blobs.ipynb  growing_neural_gas_blobs.ipynb  growing_neural_gas_blobs.py  inverse_neural_gas_blobs.ipynb  neural_gas_blobs.py
ngas/: __init__.py  metrics.py
ngas/models/: __init__.py  differentiable_growing_neural_gas.py  differentiable_ngas.py  growing_neural_gas.py  ngas.py  ngas_inverse.py
tests/: test_differentiable_growing_neural_gas.py  test_differentiable_ngas.py  test_growing_neural_gas.py  test_neural_gas.py  test_ngas_inverse.py
